# LLM_COUNCIL

./: .gitignore  README.md  pyproject.toml
src/llm_council/: crew.py  main.py
src/llm_council/config/: agents.yaml  tasks.yaml
